# Computational-Models-for-Robotics

./: CMakeLists.txt  Readme.html  Readme.md
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  ContourPlot.h  Linkage.h  TestResult.h  ik-app.cpp  opt-app.cpp  test.cpp
src/guiLib/: CMakeLists.txt  application.cpp  application.h
src/optLib/: GradientDescentMinimizer.h  Minimizer.h  NewtonFunctionMinimizer.h  ObjectiveFunction.h  RandomMinimizer.h
